--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -1,4 +1,4 @@
-body {
+#site {
   background: image_url("welcome_image.jpg") no-repeat center center fixed;
   background-size: cover;
   height: 100%;
